# ecu-logic

./: .gitignore  README.md  meson.build
include/: ecu_logic.h
src/: ecu_logic.c
test/: meson.build  test_ecu_logic.cpp
